# mail-notifier

./: AGENTS.md  Cargo.toml  Dockerfile  deny.toml  docker-bake.hcl
.github/: copilot-instructions.md
.github/actions/plan/: modes.ts  platforms.ts
.github/scripts/build_env/: ubuntu.sh
.github/workflows/: _build.yml  _code.yml  _docker.yml
build-utils/: cargo-zigbuild-download-url  zig-download-url
crates/lib/config-bringup/: Cargo.toml
crates/lib/config-bringup/src/: data.rs  error.rs  internal.rs  keyring.rs  lib.rs  types.rs
crates/lib/config-core/: Cargo.toml
crates/lib/config-core/src/: lib.rs
crates/lib/config-load/: Cargo.toml
crates/lib/config-load/src/: lib.rs
crates/lib/config-locate/: Cargo.toml
crates/lib/config-locate/src/: lib.rs
crates/lib/config-locate/tests/: read.rs
crates/lib/config-paths/: Cargo.toml
crates/lib/config-paths/src/: lib.rs
crates/lib/config-paths/tests/: paths.rs
crates/lib/config-resolver/: Cargo.toml
crates/lib/config-resolver/src/: lib.rs
crates/lib/config-resolver/tests/: read.rs
crates/lib/config-yaml/: Cargo.toml
crates/lib/config-yaml/src/: lib.rs
crates/lib/config-yaml/tests/: config_parsing.rs  load_yaml.rs
crates/lib/config-yaml/tests/fixtures/: basic.yml  idle_timeout.yml  keyring.yml  keyring_overrides.yml  oauth2_simple.yml  sample.yml  starttls.yml  starttls_alias.yml
crates/lib/exp-backoff/: Cargo.toml
crates/lib/exp-backoff/src/: lib.rs
crates/lib/icon-render/: Cargo.toml
crates/lib/icon-render-loop/: Cargo.toml
crates/lib/icon-render-loop/src/: data.rs  lib.rs
crates/lib/icon-render/src/: lib.rs
crates/lib/imap-auth/: Cargo.toml
crates/lib/imap-auth/src/: lib.rs
crates/lib/imap-checker/: Cargo.toml
crates/lib/imap-checker/src/: connect_and_login.rs  context.rs  fetch_counts.rs  lib.rs  mailbox_counts.rs  monitor_mailbox_counts.rs  monitor_new_mail.rs  password.rs
crates/lib/imap-connect/: Cargo.toml
crates/lib/imap-connect/src/: lib.rs
crates/lib/imap-monitor/: Cargo.toml
crates/lib/imap-monitor/src/: config.rs  lib.rs
crates/lib/imap-service/: Cargo.toml
crates/lib/imap-service/src/: lib.rs
crates/lib/imap-session/: Cargo.toml
crates/lib/imap-session/src/: auth.rs  lib.rs
crates/lib/imap-tls/: Cargo.toml
crates/lib/imap-tls-core/: Cargo.toml
crates/lib/imap-tls-core/src/: lib.rs
crates/lib/imap-tls-rustls/: Cargo.toml
crates/lib/imap-tls-rustls/src/: lib.rs
crates/lib/imap-tls/src/: lib.rs
crates/lib/imap-utf7/: Cargo.toml
crates/lib/imap-utf7/src/: lib.rs
crates/lib/keyring-bridge/: Cargo.toml
crates/lib/keyring-bridge/src/: lib.rs
crates/lib/keyring-password/: Cargo.toml
crates/lib/keyring-password/src/: lib.rs  tests.rs
crates/lib/mailbox-monitor/: Cargo.toml
crates/lib/mailbox-monitor/src/: lib.rs
crates/lib/monitoring-core/: Cargo.toml
crates/lib/monitoring-core/src/: lib.rs
crates/lib/monitoring-engine/: Cargo.toml
crates/lib/monitoring-engine/src/: lib.rs
crates/lib/monitoring-workload-imap/: Cargo.toml
crates/lib/monitoring-workload-imap/src/: lib.rs
crates/lib/oauth2-session/: Cargo.toml
crates/lib/oauth2-session/src/: lib.rs
crates/lib/oauth2-token-storage-core/: Cargo.toml
crates/lib/oauth2-token-storage-core/src/: lib.rs
crates/lib/oauth2-token-storage-keyring/: Cargo.toml
crates/lib/oauth2-token-storage-keyring/src/: lib.rs
crates/lib/supervisor/: Cargo.toml
crates/lib/supervisor/src/: lib.rs
crates/lib/tui-crossterm-guard/: Cargo.toml
crates/lib/tui-view/: Cargo.toml
crates/lib/tui-view/src/: lib.rs
crates/tests/imap-integration/: Cargo.toml
crates/tests/imap-integration/src/: env.rs  greenmail.rs  imap.rs  lib.rs  port.rs
crates/tests/imap-integration/tests/: imap_counts.rs
macos/: README.md  mail-notifier-tray.plist  svc-install  svc-uninstall
macos/tray/: README.md  mail-notifier-tray.plist  svc-install  svc-uninstall
