[workspace]
resolver = "3"
members = ["crates/*/*"]

[workspace.dependencies]
config-core = { path = "crates/lib/config-core" }
config-yaml = { path = "crates/lib/config-yaml" }
imap-checker = { path = "crates/lib/imap-checker" }
imap-tls = { path = "crates/lib/imap-tls" }
imap-tls-core = { path = "crates/lib/imap-tls-core" }
imap-tls-rustls = { path = "crates/lib/imap-tls-rustls" }
mailbox-monitor = { path = "crates/lib/mailbox-monitor" }

async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
color-eyre = "0.6"
crossterm = "0.29.0"
envfury = "0.2"
ratatui = "0.30.0"
rustls = "0.23"
rustls-native-certs = "0.8"
serde = "1"
serde_yaml_bw = "2.5"
slotmap = "1.1.1"
testcontainers = "0.26"
thiserror = "2"
tokio = { version = "1", default-features = false }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"
