[workspace]
resolver = "3"
members = ["crates/*/*"]

[workspace.dependencies]
config-bringup = { path = "crates/lib/config-bringup" }
config-core = { path = "crates/lib/config-core" }
config-load = { path = "crates/lib/config-load" }
config-paths = { path = "crates/lib/config-paths" }
config-resolver = { path = "crates/lib/config-resolver" }
config-yaml = { path = "crates/lib/config-yaml" }
exp-backoff = { path = "crates/lib/exp-backoff" }
icon-render = { path = "crates/lib/icon-render" }
icon-render-loop = { path = "crates/lib/icon-render-loop" }
imap-checker = { path = "crates/lib/imap-checker" }
imap-monitor = { path = "crates/lib/imap-monitor" }
imap-session = { path = "crates/lib/imap-session" }
imap-tls = { path = "crates/lib/imap-tls" }
imap-tls-core = { path = "crates/lib/imap-tls-core" }
imap-tls-rustls = { path = "crates/lib/imap-tls-rustls" }
imap-utf7 = { path = "crates/lib/imap-utf7" }
keyring-bridge = { path = "crates/lib/keyring-bridge" }
keyring-password = { path = "crates/lib/keyring-password" }
monitoring-engine = { path = "crates/lib/monitoring-engine" }
supervisor = { path = "crates/lib/supervisor" }
tui-crossterm-guard = { path = "crates/lib/tui-crossterm-guard" }
tui-view = { path = "crates/lib/tui-view" }

apple-native-keyring-store = "0.2.2"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
color-eyre = "0.6"
cosmic-text = "0.16"
crossterm = "0.29.0"
dbus-secret-service-keyring-store = "0.3.3"
dirs = "6.0"
either = { version = "1", default-features = false }
envfury = "0.2"
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
image = "0.25"
keyring-core = "0.7.2"
ratatui = "0.30.0"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-native-certs = "0.8"
serde = "1"
serde_yaml_bw = "2.5"
slotmap = "1.1.1"
tao = "0.34"
testcontainers = { version = "0.26", default-features = false }
thiserror = "2"
tokio = { version = "1", default-features = false }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tray-icon = { version = "0.21", default-features = false }
windows-native-keyring-store = "0.5.1"
