[package]
name = "config-bringup"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
config-core = { workspace = true }
imap-tls = { workspace = true }
imap-utf7 = { workspace = true }
keyring-bridge = { workspace = true }
keyring-password = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
