[package]
name = "imap-monitor"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
imap-checker = { workspace = true }
imap-session = { workspace = true }
imap-tls = { workspace = true }
imap-utf7 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
