[package]
name = "imap-tls-rustls"
version = "0.1.0"
edition = "2024"

[dependencies]
imap-tls-core = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tokio-rustls = { workspace = true }
