[package]
name = "monitoring-workload-imap"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
config-bringup = { workspace = true }
imap-auth = { workspace = true }
imap-checker = { workspace = true }
imap-connect = { workspace = true }
imap-monitor = { workspace = true }
imap-session = { workspace = true }
monitoring-core = { workspace = true }
