[package]
name = "imap-integration"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-imap = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["net", "time"] }

[dev-dependencies]
imap-checker = { workspace = true }
imap-utf7 = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "time"] }
